--- a/index.html
+++ b/index.html
@@ -1421,13 +1421,14 @@
         });
 
 
-    <!-- Service Worker -->
-    <script>
-        if ("serviceWorker" in navigator) {
-            navigator.serviceWorker.register("./sw.js")
-                .then(() => console.log("Service Worker Registered"))
-                .catch(err => console.log("SW registration failed:", err));
-}
+   <!-- Service Worker -->
+<script>
+  if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("./sw.js")
+      .then(() => console.log("Service Worker Registered"))
+      .catch(err => console.log("SW registration failed:", err));
+  }
+</script>
 
 
     </script>
@@ -1481,4 +1482,5 @@
 
 </body>
 </html>
+
 
