--- a/index.html
+++ b/index.html
@@ -1384,7 +1384,7 @@
       .catch(err => console.log("SW registration failed:", err));
   }
 </script>
-     // 📲 PWA Install Button Logic
+     <!-- // 📲 PWA Install Button Logic -->
 <script>
   let deferredPrompt = null;
   const installBtn = document.getElementById("installBtn");
@@ -1413,6 +1413,7 @@
 
 </body>
 </html>
+
 
 
 
