--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>منصة تعليمية متقدمة - المرحلة الإعدادية المصرية</title>
+
+    <!-- اسم المنصة -->
+    <title>منصة التمساحية التعليمية</title>
+    <meta name="description" content="منصة التمساحية التعليمية تقدم محتوى تعليمي عربي مبسط لطلاب المرحلة الإعدادية المصرية">
+
+    <!-- Open Graph (للمشاركة على السوشيال ميديا) -->
+    <meta property="og:title" content="منصة التمساحية التعليمية">
+    <meta property="og:description" content="منصة عربية متخصصة في التعليم الأونلاين للمرحلة الإعدادية المصرية">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://elkhatib-ai.github.io/Al-Tamsahya-Online-Education/">
+    <meta property="og:image" content="https://elkhatib-ai.github.io/Al-Tamsahya-Online-Education/icon-192.png">
+
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- الخطوط -->
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
+    <!-- PWA -->
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1e40af">
 
+    <!-- الأيقونات -->
     <link rel="icon" href="icon-192.png">
     <link rel="apple-touch-icon" href="icon-192.png">
-
-
-
 </head>
+
 <body>
     <div class="app-container">
 
@@ -1422,6 +1435,7 @@ async function editStudent(studentEmail) {
 
 </body>
 </html>
+
 
 
 
