--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- اسم المنصة -->
-    <title>منصة التمساحية التعليمية</title>
-    <meta name="description" content="منصة التمساحية التعليمية تقدم محتوى تعليمي عربي مبسط لطلاب المرحلة الإعدادية المصرية">
+   <title>منصة التمساحية التعليمية</title>
+<meta name="application-name" content="منصة التمساحية التعليمية">
+<meta name="description" content="منصة التمساحية التعليمية تقدم محتوى تعليمي عربي مبسط لطلاب المرحلة الإعدادية المصرية">
 
-    <!-- Open Graph (للمشاركة على السوشيال ميديا) -->
-    <meta property="og:title" content="منصة التمساحية التعليمية">
-    <meta property="og:description" content="منصة عربية متخصصة في التعليم الأونلاين للمرحلة الإعدادية المصرية">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://elkhatib-ai.github.io/Al-Tamsahya-Online-Education/">
-    <meta property="og:image" content="https://elkhatib-ai.github.io/Al-Tamsahya-Online-Education/icon-192.png">
+<!-- Open Graph (للمشاركة على السوشيال ميديا) -->
+<meta property="og:title" content="منصة التمساحية التعليمية">
+<meta property="og:description" content="منصة عربية متخصصة في التعليم الأونلاين للمرحلة الإعدادية المصرية">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://elkhatib-ai.github.io/Al-Tamsahya-Online-Education/">
+<meta property="og:image" content="https://elkhatib-ai.github.io/Al-Tamsahya-Online-Education/icon-192.png">
+
 
     <link rel="stylesheet" href="css/style.css">
 
@@ -35,8 +37,9 @@
 
         <nav class="top-nav">
             <div class="nav-title">
-                منصة تعليمية متقدمة – المرحلة الإعدادية
-            </div>
+    منصة التمساحية التعليمية
+</div>
+
             <div id="navUser" class="nav-user"></div>
             <button id="darkToggle" onclick="toggleDarkMode()">🌙</button>
 
@@ -49,7 +52,8 @@
     <!-- 🧑‍🎓 رسالة ترحيب رسمية -->
     <section class="welcome-message" id="welcomeMessage">
 
-        <h2>مرحبًا بكم في منصة التعليم المتقدمة 🎓</h2>
+        <h2>مرحبًا بكم في منصة التمساحية التعليمية 🎓</h2>
+
         <p>
             نرحب بطلاب المرحلة الإعدادية في منصتنا التعليمية الرقمية،
             والتي تهدف إلى تقديم محتوى تعليمي مبسط ومنظم
@@ -77,7 +81,9 @@
     <!-- صفحة تسجيل الدخول -->
     <div id="loginPage" class="login-container">
 
-        <h1>AI-Tamsahya-Online-Education</h1>
+        <h1>منصة التمساحية التعليمية</h1>
+<p>المرحلة الإعدادية – المنهج المصري</p>
+
 
         <input id="email" type="text" placeholder="البريد الإلكتروني">
         <input id="password" type="password" placeholder="كلمة المرور">
@@ -224,7 +230,7 @@
         تسجيل الخروج
     </button>
 
-    <footer>© 2026 منصة التعليم المصرية</footer>
+    <footer>© 2026 منصة التمساحية التعليمية</footer>
 
     <script>
         // ✅ لا نستخدم defaultUsers نهائيًا
@@ -1435,6 +1441,7 @@ async function editStudent(studentEmail) {
 
 </body>
 </html>
+
 
 
 
